# tantivy-demo

./: Cargo.toml
src/: main.rs  tantivy_storage.rs
