[package]
name = "tantivy-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datacake = "0.4.0"
tantivy = "0.19.0"
puppet = "0.4.0"
anyhow = "1"
thiserror = "1"
serde_json = "1.0.91"

mimalloc = { version = "0.1.34", default-features = false }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"